# kimg

./: .build.yml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  kimg.1.scdoc  kimg.1.txt  kimg.c  main.c  mkfile  stb_image.h
.builds/: seven.yml  six.yml
src/: common.h  main.c
